- Added displaying source device and partition number for file read operations.
- Increased boot2's maximum size from 383.5k to 447.5k.
  Updated stage 1 loaders for handling the new size limit.
- Added alternate format for setting the default partition. The user can specify the selected
  volume UUID for the "Default Partition" key.
- Implemented SPD memory automatic detection and injection,seems to work really great ...
- Factorized code to prepare a dynamic memory detection algorithm ...
- Optimized smbios table address search
- Optimized cursor spinout in textmode if no verbose mode is set
- Added ram table structures definitions
- Added getSmbios() a param permitting to select between orig and new smbios entries
- Changed "Default Partition" behaviour to accept only native system volumes or foreign partitions.
- Added NVIDIA new NVCAP customization support and support for ION gfx cards from aserebln
- Added ATI new framebuffers support and new cards from PCEFI10.6
- improved ACPI file search algo by implementing a cache.
- Nvidia injection fix
- pciroot would not always return correct uuid in autodection mode
- Fixed the hibernation problem in boot2/resume.c
- Fixed all new booter versions with SystemType would override the facp value even if correct,
  now keeps the facp value if correct and no override has been done, implemented a best effort algo.
  for maximizing the chance to get the most correct value before we decide to use a fixed value (1=desktop)
- Fixed display cosmetics of UUID, now a convert.c file contains all 
  conversions api, to be completed by function that we should reuse.
  
- Fixed SystemType would be always forced to a value, now optionally changed
  only if ovveriden
- Kept SystemID as the only option to change manually the system-id 
  For theses reasons, SystemId from bootConfig and SMUUID from smbiosConfig aer now DEPRECATED.
